tests/parser/define-type.9.bad.error
error: Malformed constructor
  --> test:5:2
   |
 4 |  (define-type (T :a)
   |               ------ in this type definition
 5 |    0.5)
   |    ^^^ expected symbol
