tests/parser/define-type.9.bad.coalton
;; BAD: Define Type
(package test-package)

(define-type (T :a)
  0.5)
